--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "SaveTabs",
-  "version": "0.2",
+  "version": "0.2.1",
   "description": "Saves all the tabs in your current window to a new, timestamped, bookmarks folder.",
   "browser_action": {
     "default_icon":  "icon.png",
@@ -12,5 +12,10 @@
   "permissions": [
     "bookmarks",
 	"tabs"
-  ]
+  ],
+  "icons": {
+    "16": "icon/icon-16.png",
+    "48": "icon/icon-48.png",
+    "128": "icon/icon-128.png"
+  }
 }
